<resources>
    <string name="app_name">Aplicacion2Trimestre_martinGilMiguel</string>

    <string name="google_maps_key" formatted="false" translatable="false">AIzaSyD4umwTDPvVAV_abKEIPTR5kZ5KUhaZvWc</string>
    <string name="api_key_google" formatted="false" translatable="false">753043433789-e6dmn64ldig34j333pa3gord5i4dp6tu.apps.googleusercontent.com</string>
    <string name="btn1_nombre">Notas</string>
    <string name="btn2_nombre">Buscador</string>
    <string name="btn3_nombre">Localización</string>
    <string name="btn4_nombre">Imagenes</string>
    <string name="btn5_nombre">Compañeros</string>
    <string name="btn6_nombre">Perfil</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bienvenido_a_pocketbase">Bienvenido a PocketBase</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="salir">Salir</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="nueva_nota">Nueva Nota</string>
    <string name="t_tulo_de_la_nota">Título de la nota</string>
    <string name="escribe_tu_nota">Escribe tu nota aquí...</string>
    <string name="buscar_elemento">Buscar en Internet</string>
    <string name="pocketbase">PocketBase</string>
    <string name="logearme">Logearme</string>
    <string name="registrarme">Registrarme</string>
    <string name="limpiar">Limpiar</string>
    <string name="nuestras_oficinas">Nuestras oficinas</string>
    <string name="oficina_regional">Oficina Regional</string>
    <string name="oficina_central">Oficina Central</string>
    <string name="atras">Atrás</string>
    <string name="bloc_de_notas">Bloc de notas</string>
    <string name="nombre_del_personaje">Nombre del Personaje</string>
    <string name="crea_tu_nota">Crea tu nota</string>
    <string name="borrar">Borrar</string>
    <string name="actualizar">Actualizar</string>
    <string name="perfil_guardado">Perfil Guardado</string>
    <string name="enviar">Enviar</string>
    <string name="bombilla">Bombilla</string>
    <string name="texto_descripcion_app">Esta es una aplicación de reproducción de videoEsta es una aplicación de reproducción de videoEsta es una aplicación de reproducción de videoEsta es una aplicación de reproducción de videoEsta es una aplicación de reproducción de videoEsta es una aplicación de reproducción de videoEsta es una aplicación de reproducción de videoEsta es una aplicación de reproducción de videoEsta es una aplicación de reproducción de videoEsta es una aplicación de reproducción de videoEsta es una aplicación de reproducción de videoEsta es una aplicación de reproducción de videoEsta es una aplicación de reproducción de videoEsta es una aplicación de reproducción de videoEsta es una aplicación de reproducción de videoEsta es una aplicación de reproducción de videoEsta es una aplicación de reproducción de videoEsta es una aplicación de reproducción de videoEsta es una aplicación de reproducción de videoEsta es una aplicación de reproducción de videoEsta es una aplicación de reproducción de videoEsta es una aplicación de reproducción de video.........</string>
    <string name="reproducir">Reproducir</string>
    <string name="informaci_n_de_pocketbase">Información de PocketBase!</string>
    <string name="eventos">Eventos</string>
    <string name="informacion">Informacion</string>
    <string name="iluminaci_n">Iluminación</string>

</resources>